# atelier

./: .gitignore  AGENTS.md  ATELIER_REDO_PLAN.md  Cargo.toml  LICENSE  README.md  tests_public_hygiene.py  tests_release_workflow.py
.github/workflows/: ci.yml  release.yml
crates/atelier-cli/: Cargo.toml
crates/atelier-cli/src/: main.rs
crates/atelier-cli/tests/: cli_bulk_recover.rs  cli_codex_native.rs  cli_codex_policy.rs  cli_concurrency.rs  cli_daemon.rs  cli_doctor.rs  cli_gateway.rs  cli_gateway_server.rs  cli_hardening.rs  cli_home.rs  cli_interactive.rs  cli_jobs.rs  cli_managed.rs  cli_managed_sessions.rs  cli_managed_worker.rs  cli_people.rs  cli_project.rs  cli_project_aliases.rs  cli_prompts.rs  cli_recover.rs  cli_registry.rs  cli_resume.rs  cli_status.rs  cli_thread.rs  cli_thread_ux.rs  cli_work.rs  cli_work_person_memory.rs  cli_worker_reconciliation.rs
crates/atelier-core/: Cargo.toml
crates/atelier-core/src/: codex.rs  codex_app_server.rs  codex_native.rs  doctor.rs  gateway.rs  job.rs  lib.rs  people.rs  project.rs  registry.rs  thread.rs  thread_delivery.rs  thread_events.rs  thread_interaction.rs  thread_items.rs  thread_pending.rs  thread_progress.rs  thread_queue.rs
crates/atelier-core/tests/: codex_app_server_prompts.rs  gateway_identity.rs  thread_delivery.rs  thread_events.rs  thread_interaction.rs  thread_items.rs  thread_pending.rs  thread_progress.rs  thread_queue.rs
docs/: architecture.md  codex-runtime.md  principles.md  roadmap.md  thread-conversation-items.md  usage.md
docs/decisions/: 0001-codex-runtime-boundary.md  0002-no-hidden-codex-home-swaps.md  0003-threads-and-session-lineage.md  (+10 more)
scripts/: hygiene-scan.sh
(+11 files in other folders)
