[workspace]
members = [
    "crates/atelier-core",
    "crates/atelier-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
predicates = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde", "parsing"] }
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
assert_cmd = "2.0"
