[package]
name = "atelier-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
atelier-core = { path = "../atelier-core" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
